Replace unnecessary usages of guava's Lists by standard library methods